Gap Fix

--- a/client/src/components/homepage/Navigation.css
+++ b/client/src/components/homepage/Navigation.css
@@ -101,7 +101,7 @@
 }
 
 .ham-menu-open {
-    top: 9rem;
+    top: 8.99rem;
     /* display: block;
     opacity: 1; */
 }
